# Project_AntiPulse

./: #GeoConstruction.cc#  .GeoConstruction.cc.swp  .gitignore  CMakeLists.txt  EventAction.cc  EventAction.hh  GeoConstruction.cc  GeoConstruction.cc.working  GeoConstruction.cc~  GeoConstruction.hh  GeoConstruction.hh_working  GratingHit.cc  GratingHit.hh  HitBuffer.cc  HitBuffer.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGenerator.cc  PrimaryGenerator.cc~  PrimaryGenerator.hh  Project_AntiPulse.cc  README.md  RunAction.cc  RunAction.hh  SensitiveDet.cc  SensitiveDet.hh  SteppingAction.cc  SteppingAction.cc.working  SteppingAction.hh  UserActions.cc  UserActions.hh  g4root.hh  run.mac  vis.mac
Source_Reconstruction/: reconstruction.cc  scinVolExtraction.cc
output/: 3D_voxel_histogram.csv  AntiProton.C  AntiProton.h  ReconstructedVertices.root  compareEnergyDeps.C  comparePrimaryReco.C  histograms_2D.root  overlayHistos.C  reconstruction  reconstruction.cc  reconstruction_3DSource  reconstruction_3DSource.cc  reconstruction_3D_Source.cc  reconstruction_PointSource  reconstruction_PointSource.cc  scinVolExtraction  scinVolExtraction.cc  viewReconsHist.C  xyz_cor.root  xyz_cor_reconstructed.root
